[project]
name = "jableTVDownload"
version = "1.0"
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "requests==2.25.1",
    "m3u8==0.8.0",
    "python-ffmpeg>=1.0.14",
    "fire>=0.4.0",
    "grequests>=0.6.0",
    "botasaurus>=4.0.59",
    "beautifulsoup4>=4.12.3",
    "chrome-extension-python>=1.0.1",
    "pycryptodome>=3.20.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
